[gd_scene load_steps=10 format=2]

[ext_resource path="res://tutoriales/assets/btn_rightpressed.png" type="Texture" id=1]
[ext_resource path="res://tutoriales/assets/btn_left.png" type="Texture" id=2]
[ext_resource path="res://tutoriales/assets/btn_right.png" type="Texture" id=3]
[ext_resource path="res://menus/assets/btn_exitpressed.png" type="Texture" id=4]
[ext_resource path="res://tutoriales/assets/btn_leftpressed.png" type="Texture" id=5]
[ext_resource path="res://tutoriales/assets/tutorial_img.png" type="Texture" id=6]
[ext_resource path="res://menus/assets/btn_exit.png" type="Texture" id=7]
[ext_resource path="res://tutoriales/juegoahorcado/tutoAhorcado.gd" type="Script" id=8]
[ext_resource path="res://tutoriales/assets/tutorial_ahorcado_3.png" type="Texture" id=9]

[node name="Tutorial_ahorcado" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
script = ExtResource( 8 )

[node name="TutoriaAhorcado" type="WindowDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -177.5
margin_top = -489.0
margin_right = 177.5

[node name="TextureRect" type="TextureRect" parent="TutoriaAhorcado"]
margin_left = -2.0
margin_top = -39.0
margin_right = 353.0
margin_bottom = 491.0
texture = ExtResource( 6 )

[node name="TutoAhorcado" type="Sprite" parent="TutoriaAhorcado" groups=["imagen"]]
position = Vector2( 176.5, 204 )
texture = ExtResource( 9 )
hframes = 24

[node name="flecha_izq" type="TextureButton" parent="TutoriaAhorcado"]
margin_left = 30.5
margin_top = 401.0
margin_right = 94.5
margin_bottom = 465.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 2 )

[node name="flecha_der" type="TextureButton" parent="TutoriaAhorcado"]
margin_left = 259.5
margin_top = 402.0
margin_right = 323.5
margin_bottom = 466.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 3 )

[node name="btn_salir" type="TextureButton" parent="TutoriaAhorcado"]
margin_left = 319.0
margin_top = -47.0
margin_right = 383.0
margin_bottom = 17.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 7 )

[connection signal="button_up" from="TutoriaAhorcado/flecha_izq" to="." method="_on_flecha_izq_button_up"]
[connection signal="button_up" from="TutoriaAhorcado/flecha_der" to="." method="_on_flecha_der_button_up"]
